Constant 590px height

--- a/src/css/ng-magnify.css
+++ b/src/css/ng-magnify.css
@@ -25,6 +25,6 @@
     z-index: 999;
   }
   .magnify-container .magnify-image {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 590px;
   }
